# matar

./: Cargo.toml  README.md  linux_programs_output.txt
src/: cli.rs  error.rs  main.rs  process.rs  sys_cmd.rs
